# php-decorator

./: .buildinfo  .gitignore  LICENSE  README.md  composer.json  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: documentation.yaml
_sources/: index.rst.txt
docs/: conf.py  index.md
docs/examples/php/: simple_function.php
docs/examples/python/: simple_function.py
src/: helper.php
tests/: example.php
