[tool.poetry]
name = "decorator"
version = "0.1.0"
description = ""
authors = ["Pavel Omelchenko <p.Omelchenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Sphinx = "6.2.1"
sphinx-rtd-theme = "^1.3.0"
sphinx-copybutton = "^0.5.2"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
